--- a/styles.less
+++ b/styles.less
@@ -139,3 +139,134 @@ header {
         }
     }
 }
+
+main {
+    height: 395px;
+    width: 1800px;
+    background-color: brown;
+
+    nav {
+        display: inline-block;
+        background-color: white;
+        height: 45px;
+        width: 1800px;
+    }
+
+    nav ul {
+        margin-left: 13px;
+        margin-right: 50px;
+        margin-top: 10px;
+    }
+
+    nav ul li {
+        display: inline-block;
+        color: white;
+        font-size: 15px;
+        padding-left: 20px;
+        position: relative;
+    }
+
+    nav ul li a {
+        color: black;
+        text-decoration: none;
+        padding-top: -10px;
+        position: relative;
+        margin-top: -20px;
+        display: block;
+    }
+
+    nav ul li:last-child {
+        margin-left: 940px;
+    }
+
+    /* Slideshow container */
+    .slideshow-container {
+        width: 1800px;
+        height: 395px;
+        position: relative;
+        margin: auto;
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: 200px;
+        color: black;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 100px;
+        border-radius: 3px 0 0 3px;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 100px 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .dots {
+        margin: -130px auto;
+    }
+
+    .arrows a {
+        margin-top: -150px;
+    }
+
+    .active,
+    .dot:hover {
+        background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade {
+        from {
+            opacity: 0.4;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+
+    @keyframes fade {
+        from {
+            opacity: 0.4;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+}
